# nuova_gattaiola_espidf

./: .gitignore  CMakeLists.txt  comune.hold  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
data/: config.html  config.json  console.html  index.html  manifest.json  modal-graph.css  modal-graph.js  update.html
include/: buffers_psram.h  common.h  comune.h  console.h  core1.h  credentials.h  door.h  ota_handlers.h  telnet_server.h  time_sync.h  wifi.h
src/: CMakeLists.txt  buffers.psram.cpp  comune.cpp  console.cpp  core1.cpp  door.cpp  http_server.cpp  main.c  main.cpp  modal-graph.css  ota_handlers.cpp  system_diag.cpp  telnet_server.cpp  time_sync.cpp  wifi.cpp
